@@ -17,12 +17,50 @@ public class SocialMediaDatabaseTest {
             "I teach CS180", new ArrayList<>(), new ArrayList<>(), sm);
     private Post expectedPost = new Post(expectedUser, "Purdue CS180",
             "Purdue CS 180 is the best CS class", new ArrayList<Comment>(), 0, 0, sm);
-    private ArrayList<User> expected = new ArrayList<>();
+    private ArrayList<User> expected = new ArrayList<User>();
+    private ArrayList<Post> expectedPosts = new ArrayList<Post>();
+
+    @Test
+    public void testGetUser() {
+        User expectedOutput = expectedUser;
+
+        assertEquals(expectedOutput, sm.getUsers().get(0));
+    }
+
+    @Test
+    public void testGetPost() {
+        Post expectedOutput = expectedPost;
+
+        assertEquals(expectedOutput, sm.getPosts().get(0));
+    }
+
+    @Test
+    public void testAddUser() {
+        sm.addUser(expectedUser);
+
+        expected.add(expectedUser);
+        expected.add(expectedUser);
+
+        assertEquals(expected, sm.getUsers());
+    }
+
+    @Test
+    public void testAddPost() {
+        sm.addPost(expectedPost);
+
+        expectedPosts.add(expectedPost);
+        expectedPosts.add(expectedPost);
+
+        assertEquals(expectedPosts, sm.getPosts());
+
+    }
 
     @Test
     public void testCreateUser() {
-        sm.createUser("Dunsmore","CS180istheBest", "I teach CS180");
+        User test = sm.createUser("Frank", "Maximilton", "Hey I'm a robot.");
+        expected = new ArrayList<User>();
         expected.add(expectedUser);
+        expected.add(test);
         assertEquals(expected, sm.getUsers());
     }
 
@@ -50,7 +88,7 @@ public class SocialMediaDatabaseTest {
             if (!sm.getUsers().contains(expectedUser)) {
                 sm.createUser("Dunsmore","CS180istheBest", "I teach CS180");
             }
-            sm.getUsers().getFirst().createPost("Purdue CS180", "Purdue CS 180 is the best CS class");
+            sm.getUsers().get(0).createPost("Purdue CS180", "Purdue CS 180 is the best CS class");
         }
         Post foundPost = sm.findPost("Purdue CS180");
         assertEquals(expectedPost, foundPost);
@@ -58,14 +96,52 @@ public class SocialMediaDatabaseTest {
 
     @Test
     public void testReadUsers() {
-        sm.createUser("PurduePete", "MyPurdue1234", "Hey guys it's me, Pete from Purdue!");
+        User test = new User("PurduePete", "MyPurdue1234", "Hey guys it's me, Pete from Purdue!",
+                new ArrayList<User>(), new ArrayList<User>(), sm);
         sm.readUsers();
         ArrayList<User> expected = new ArrayList<>();
-        expected.add(new User("Dunsmore","CS180istheBest",
-                "I teach CS180", new ArrayList<>(), new ArrayList<>(), sm));
-        expected.add(new User("PurduePete", "MyPurdue1234",
-                "Hey guys it's me, Pete from Purdue!", new ArrayList<>(), new ArrayList<>(), sm));
+        expected.add(expectedUser);
+        expected.add(test);
         assertEquals(expected, sm.getUsers());
     }
+
+
+/*public void readPosts() {
+        try (FileInputStream fis = new FileInputStream(postsIn);
+             ObjectInputStream ois = new ObjectInputStream(fis)) {
+            this.posts = (ArrayList<Post>) ois.readObject();
+        } catch (IOException | ClassNotFoundException e) {
+            e.printStackTrace();
+        }
+    }*/
+
+    @Test
+    public void testReadPosts() {
+        sm.readPosts();
+        expectedPosts.add(expectedPost);
+
+        assertEquals(true, expectedPosts.get(0).equals(sm.getPosts().get(0)));
+    }
+
+    @Test
+    public void testWriteUser() {
+        User newUser = new User("KrisDreemur" , "DeltaruneRef", "Hey it's me Kris",
+                new ArrayList<User>(), new ArrayList<User>(), sm);
+        //Creating a new User object implicitly calls writeUser()
+
+        assertEquals(true, sm.getUsers().contains(newUser));
+    }
+
+    @Test
+    public void testWritePost() {
+        Post newPost = new Post(expectedUser, "Test case Object", "Blank",
+                new ArrayList<Comment>(), 0, 0, sm);
+        //Creating a post implicitly calls writePost()
+
+        assertEquals(true, sm.getPosts().contains(newPost));
+    }
+
+
+
 
 }
